--- a/src/components/ProposalBar.css
+++ b/src/components/ProposalBar.css
@@ -1,3 +1,28 @@
 .proposalBarContainer{
     height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width:100%;
+    height: 100%;
+    
+    
+    /* align-items: center; */
+    
+    
+}
+.titleProposalContainer{
+    display: flex;
+    align-items: center;
+    height:10%;
+    font-size: 24px;
+    font-weight: 600;
+    margin-top: 32px;
+}
+.proposalCardsContainer{
+    margin-top: 32px;
+    display: flex;
+    flex-wrap: wrap;
+    /* overflow-y: scroll; */
+    height:90%;
 }
