--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
     overflow: hidden;
     justify-content: space-between;
     background-color: #fafafa;
+    /* background: linear-gradient(113.5% 113.5% at 56.15% -32.22%, rgba(229, 0, 122, 0.3) 0%, rgba(243, 137, 193, 0.138844) 70.82%, rgba(255, 255, 255, 0) 100%) warning: gradient uses a rotation that is not supported by CSS and may not behave as expected, #FFFFFF; */
+
 }
 ::-webkit-scrollbar {
     width: 8px;
@@ -22,7 +24,7 @@
     /* width: 17.5%; */
     height: 100%;
 }
-mainContainer {
+.mainContainer {
     /* width: 82.5%; */
     height: 100%;
 }
