--- a/src/components/DataCard.css
+++ b/src/components/DataCard.css
@@ -1,11 +1,13 @@
 .dataCardContainer {
     display: flex;
     flex-direction: column;
-    width: 200px;
-    height: 200px;
+    width: 216px;
+    height: 162px;
     background-color: #1e1e28;
     color: white;
-    padding: 20px;
+    padding-top: 20px;
+    box-sizing: border-box;
+    /* margin-top: 20px; */
     justify-content: space-between;
     border-radius: 10px;
 }
@@ -14,26 +16,24 @@
     font-size: 16px;
     font-weight: 600;
     height: 25%;
+    padding-left: 20px;
+    box-sizing: border-box;
 }
 .dataContainer {
     font-size: 28px;
     font-weight: 600;
     height: 30%;
+    padding-left: 20px;
+    box-sizing: border-box;
 }
 .extraContainer {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     height: 45%;
-}
-.circleContainer {
-    display: flex;
+    padding-left: 20px;
     align-items: center;
-    justify-content: center;
-    width: 40%;
 }
-.linkContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 60%;
+
+.lineContainer{
+    width:100%
 }
