--- a/src/components/DataBar.css
+++ b/src/components/DataBar.css
@@ -9,6 +9,6 @@
 .tempContainer{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     width: 90%;
 }
