modal + databar ui added

--- a/src/components/DataCard.css
+++ b/src/components/DataCard.css
@@ -10,6 +10,7 @@
     /* margin-top: 20px; */
     justify-content: space-between;
     border-radius: 10px;
+    margin-right: 56px;
 }
 
 .titleContainer {
