--- a/src/components/IntroBar.css
+++ b/src/components/IntroBar.css
@@ -62,6 +62,12 @@
     width: 60%;
     background-color: #e5007a;
     color: white;
+    border-width: 0px;
+    font-weight: 600;
+    font-size: 16px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
 }
 .connectedWalletContainer {
     display: flex;
@@ -77,6 +83,6 @@
     /* border-width: 2px;
     border-style: solid; */
 }
-.indicatorContainer{
+.indicatorContainer {
     margin-right: 6px;
 }
