--- a/src/components/SideNav.css
+++ b/src/components/SideNav.css
@@ -6,30 +6,87 @@
     justify-content: space-between;
     width: 17%;
 }
-.logoContainer{
-    color:#E5007A;
+.logoContainer {
+    color: #e5007a;
     margin-top: 33px;
     font-size: 28px;
     height: 15%;
 }
-.sideOptionsContainer{
+.sideOptionsContainer {
     display: flex;
     flex-direction: column;
-    height: 85%;
-    
+    height: 75%;
+
     width: 80%;
 }
-.optionContainer{
-    color: #1E1E28;
+.optionContainer {
+    color: #1e1e28;
     background-color: white;
-    padding:5px     ;  
+    padding: 5px;
     display: flex;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
     border-radius: 10px;
     font-size: 14px;
-    height:36px;
+    height: 36px;
     font-weight: 600;
-    
-
+    margin-bottom: 24px;
+}
+.optionUnselectedContainer{
+    background-color: #1e1e28;
+    color: white;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    font-size: 14px;
+    height: 36px;
+    font-weight: 600;
+    margin-bottom: 24px;
+}
+.socialContainer {
+    color: white;
+    height: 10%;
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+    padding: 24px;
+    width:80%;
+}
+.githubContainer {
+    height: 24px;
+    width: 24px;
+    border-style: solid;
+    border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.discordContainer {
+    height: 24px;
+    width: 24px;
+    border-style: solid;
+    border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.twitterContainer {
+    height: 24px;
+    width: 24px;
+    border-style: solid;
+    border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.facebookContainer {
+    height: 24px;
+    width: 24px;
+    border-style: solid;
+    border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
