--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -21,16 +21,23 @@
 .commentRIGHT {
     display: flex;
     flex-direction: column;
+    margin-left: 24px;
     align-items: flex-start;
     justify-content: space-around;
 }
 
 .commentHeader {
+    margin: 12px 0 12px 0;
     display: flex;
+}
+
+.commentContent {
+    margin: 0 0 0 0;
 }
 
 .commentFooter {
     display: flex;
+    margin: 12px 0 12px 0;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
