--- a/src/components/ProposalCard.css
+++ b/src/components/ProposalCard.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
     padding: 24px;
     height: 140px;
-    width: 328px;
+    width: 100%;
     background-color: #ffffff;
     border-radius: 10px;
     margin-right: 40px;
