--- a/src/components/ProposalCard.css
+++ b/src/components/ProposalCard.css
@@ -26,7 +26,7 @@
     height: 48px;
     width: 48px;
     border-radius: 24px;
-    background-color: #e5007a;
+    background-color: #1E1E28;
 }
 .proposalAuthorDataContainer {
     width: 80%;
