--- a/src/components/DataCard.css
+++ b/src/components/DataCard.css
@@ -1,3 +1,5 @@
+/* add gradient by kartik 24a */
+
 .dataCardContainer {
     display: flex;
     flex-direction: column;
@@ -11,6 +13,7 @@
     justify-content: space-between;
     border-radius: 10px;
     margin-right: 56px;
+    /* transition: all 0.2s ease-in-out; */
 }
 
 .titleContainer {
@@ -19,22 +22,48 @@
     height: 25%;
     padding-left: 20px;
     box-sizing: border-box;
+    transition: all 0.2s ease-in-out;
 }
 .dataContainer {
     font-size: 28px;
     font-weight: 600;
-    height: 30%;
+    height: 35%;
     padding-left: 20px;
     box-sizing: border-box;
+    transition: all 0.2s ease-in-out;
 }
 .extraContainer {
     display: flex;
     justify-content: flex-start;
-    height: 45%;
+    height: 20%;
     padding-left: 20px;
     align-items: center;
+    transition: all 0.2s ease-in-out;
+}
+.viewMoreContainer {
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    box-sizing: border-box;
+    padding-bottom: 15px;
+    width: 100%;
+    color:#E5007A;
 }
 
-.lineContainer{
-    width:100%
+.lineContainer {
+    width: 100%;
+}
+.dataCardContainer:hover > .titleContainer {
+    height: 23%;
+    
+}
+.dataCardContainer:hover > .dataContainer {
+    height: 35%;
+    
+}
+.dataCardContainer:hover > .extraContainer {
+    height: 22%;
+
+    
+
 }
