--- a/src/components/ProposalBar.css
+++ b/src/components/ProposalBar.css
@@ -40,7 +40,7 @@
     margin-bottom: 4px;
     margin-top: 16px;
     box-sizing: border-box;
-    width:80%;
+    width: 80%;
 }
 .titleProposalTopUnselectedContainer {
     display: flex;
@@ -49,12 +49,18 @@
     font-weight: 400;
     margin-right: 36px;
 }
+/* .linkContainer :hover,
+.linkContainer :visited,
+.linkContainer {
+    list-style: none;
+    text-decoration: none;
+} */
+
 .searchBarContainer {
     padding-right: 16px;
     border-radius: 20px;
     border-style: solid;
-    width:300px;
-
+    width: 300px;
 }
 .downArrowContainer {
     margin-left: 8px;
