--- a/src/components/DataCard.css
+++ b/src/components/DataCard.css
@@ -9,10 +9,13 @@
     color: white;
     padding-top: 20px;
     box-sizing: border-box;
+
     /* margin-top: 20px; */
     justify-content: space-between;
     border-radius: 10px;
-    margin-right: 56px;
+    box-shadow: 0px 4px 10px   #d9d9d9;
+
+    /* margin-right: 64px; */
     /* transition: all 0.2s ease-in-out; */
 }
 
@@ -39,6 +42,7 @@
     padding-left: 20px;
     align-items: center;
     transition: all 0.2s ease-in-out;
+    color:white;
 }
 .viewMoreContainer {
     display: flex;
