--- a/src/components/ProposalBar.css
+++ b/src/components/ProposalBar.css
@@ -11,17 +11,18 @@
 .titleProposalContainer {
     display: flex;
 
-    align-items: center;
+    align-items:flex-end;
     justify-content: space-between;
     height: 10%;
     margin-top: 32px;
-    width: 95%;
+    
 }
 .sortingContainer {
     display: flex;
     flex-direction: column;
     width: 100%;
     margin: 0;
+    
 }
 .lineSortContainer {
     width: 100%;
@@ -31,24 +32,33 @@
     display: flex;
     align-items: center;
 
-    font-size: 24px;
+    font-size: 16px;
     font-weight: 600;
     margin-right: 36px;
+    
 }
 .sortingOptionContainer {
     display: flex;
     margin-bottom: 4px;
     margin-top: 16px;
     box-sizing: border-box;
+    
+    align-items: center;
+    justify-content: space-between;
     width: 80%;
+    
 }
 .titleProposalTopUnselectedContainer {
     display: flex;
     align-items: center;
+    justify-content: center;
     font-size: 16px;
     font-weight: 400;
     margin-right: 36px;
+    justify-content: center;
+    color:#696969
 }
+
 /* .linkContainer :hover,
 .linkContainer :visited,
 .linkContainer {
@@ -57,24 +67,35 @@
 } */
 
 .searchBarContainer {
-    padding-right: 16px;
-    border-radius: 20px;
+    margin-right: 16px;
+    border-radius: 10px;
     border-style: solid;
-    width: 300px;
+    width: 20%;
+    border-width: 1.5px;
+    /* box-sizing: border-box; */
+padding:16px;
+    
+    border-color: #d3d3d3;
+    min-height: 40px;
+}
+.searchNameContainer{
+    color:#696969;
+    
+    font-size: 16px;
 }
 .downArrowContainer {
     margin-left: 8px;
 }
 .addProposalContainer {
-    width: 250px;
+    min-width: 216px;
     background-color: #e5007a;
     display: flex;
     align-items: center;
     box-sizing: border-box;
-    padding: 20px;
+    padding: 16px;
     justify-content: space-around;
     border-radius: 10px;
-    height: 48px;
+    height: 40px;
     font-weight: 600;
 }
 .addProposalButtonContainer {
@@ -86,11 +107,12 @@
 }
 .proposalCardsContainer {
     margin-top: 32px;
-    display: flex;
-    flex-wrap: wrap;
+    
+    width:53%;
     height: 90%;
     text-decoration: none;
     color:black;
+
 }
 
 .proposalCardsContainer :visited {
@@ -102,12 +124,13 @@
     display: flex;
     align-items: center;
     color: black;
-    height: 60%;
+    height: 36px;
     width: 360px;
     margin-right: 64px;
     font-size: 12px;
     box-sizing: border-box;
-    padding-left:8px;
+    padding:8px;
+    justify-content: space-between;
     
   }
   
