--- a/src/components/ProposalCard.css
+++ b/src/components/ProposalCard.css
@@ -4,12 +4,12 @@
     justify-content: space-between;
     box-sizing: border-box;
     padding: 24px;
-    height: 140px;
+    height: 80px;
     width: 100%;
     background-color: #ffffff;
     border-radius: 10px;
-    margin-right: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 16px;
+    box-shadow: 0px 4px 10px   #d9d9d9;
     
 }
 .porposalCardDataContainer {
@@ -56,6 +56,9 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+}
+.reactionContainer{
+    margin-right: 4px;
 }
 .proposalReactionContainer{
     display: flex;
