--- a/src/components/SideNav.css
+++ b/src/components/SideNav.css
@@ -20,8 +20,8 @@
     width: 80%;
 }
 .optionContainer {
-    color: #1e1e28;
-    background-color: white;
+    color: white;
+    background-color: #e5007a;
     padding: 5px;
     display: flex;
     justify-content: center;
@@ -33,8 +33,9 @@
     margin-bottom: 24px;
 }
 .optionUnselectedContainer{
-    background-color: #1e1e28;
-    color: white;
+    /* background-color: #1e1e28; */
+    background-color: white;
+    color: #1e1e28;
     padding: 5px;
     display: flex;
     justify-content: center;
@@ -52,13 +53,13 @@
     justify-content: space-between;
     box-sizing: border-box;
     padding: 24px;
-    width:80%;
+    width:90%;
 }
 .githubContainer {
     height: 24px;
     width: 24px;
     border-style: solid;
-    border-radius: 12px;
+    border-radius: 8px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -67,7 +68,7 @@
     height: 24px;
     width: 24px;
     border-style: solid;
-    border-radius: 12px;
+    border-radius: 8px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -76,7 +77,7 @@
     height: 24px;
     width: 24px;
     border-style: solid;
-    border-radius: 12px;
+    border-radius: 8px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -85,7 +86,7 @@
     height: 24px;
     width: 24px;
     border-style: solid;
-    border-radius: 12px;
+    border-radius: 8px;
     display: flex;
     justify-content: center;
     align-items: center;
