--- a/src/pages/Proposal.css
+++ b/src/pages/Proposal.css
@@ -1,6 +1,6 @@
-div.proposalContainer * {
+/* div.proposalContainer * {
     border: 0.5px solid black;
-}
+} */
 
 .proposalContainer {
     padding: 24px;
@@ -8,32 +8,52 @@ div.proposalContainer * {
 }
 
 .proposalHeading {
-
+    
 }
 
 .proposalName > h1 {
-    font-size: 24px;
-    font-weight: 600;
+    
+    font-size: 48px;
+    font-weight: bold;
     margin: 0px 0px 0px 0px;
-    margin-bottom: 8px;
+    margin-bottom: 0px;
 }
 
 .proposalAuthor {
-    font-size: 16px;
+    background-color: black;
+    color: white;
+    height: 14px;
+    font-size: 8px;
+    text-align: right;
+    box-shadow: 4px 4px 4px #d3d3d3;
 }
 
 .proposalContent {
-    margin: 24px 0px 24px 0px;
+    margin: 24px 0px 0px;
     height: 300px;
 }
 
+#rectangle{
+    width:100;
+    height:14px;
+    background-color:black;
+    box-shadow: 4px 4px 4px #d3d3d3;
+}
 .proposalFooter {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: right;
+    color: black;
 }
 
+.proposalUpVotes{
+    margin-right: 6px;
+}
+
+.proposalDownvotes{
+   
+
+}
 .proposalDiscussion {
     margin: 24px 0 0 0;
 }
