--- a/src/pages/Proposal.css
+++ b/src/pages/Proposal.css
@@ -13,7 +13,7 @@
 
 .proposalName > h1 {
     
-    font-size: 48px;
+    font-size: 64px;
     font-weight: bold;
     margin: 0px 0px 0px 0px;
     margin-bottom: 0px;
@@ -22,8 +22,8 @@
 .proposalAuthor {
     background-color: black;
     color: white;
-    height: 14px;
-    font-size: 8px;
+    height: 16px;
+    font-size: 12px;
     text-align: right;
     box-shadow: 4px 4px 4px #d3d3d3;
 }
@@ -54,9 +54,27 @@
    
 
 }
+
+.solid{
+    border-top: 3px solid #bbb;
+    width: 80%;
+    margin-top: 10px;
+    margin-left: 10%;
+    margin-bottom: 10px;
+    /* display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width:80%;
+    height:1px;
+
+    background-color:black;
+    box-shadow: 4px 4px 4px #d3d3d3; */
+}
 .proposalDiscussion {
+
     margin: 24px 0 0 0;
 }
+
 
 
 
