--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .container {
+    cursor: default;
     display: flex;
     width: 100%;
     height: 100vh;
@@ -21,14 +22,17 @@
     border-radius: 100vh;
 }
 .sideContainer {
+    cursor: default;
     width: 17.5%;
     height: 100%;
 }
 .mainContainer {
+    cursor: default;
     width: 82.5%;
     height: 100%;
 }
 
 .proposalContainer {
+    cursor: default;
     width: 82.5%;
     height: 100%;}
