--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -1,8 +1,7 @@
 
 
 .commentContainer {
-    display: flex;
-    flex-direction: row;
+    display: flex;   
     width: 100%;
 }
 
@@ -16,19 +15,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width:10%;
+
 }
 
 .commentRIGHT {
     display: flex;
-    flex-direction: column;
-    margin-left: 24px;
-    align-items: flex-start;
-    justify-content: space-around;
-}
-
-.commentHeader {
-    margin: 12px 0 12px 0;
-    display: flex;
+    flex-direction: column;    
+    margin-top:16px;
+    justify-content: space-betwwen;
+    width:90%;
 }
 
 .commentContent {
