--- a/src/components/ProposalCard.css
+++ b/src/components/ProposalCard.css
@@ -42,6 +42,12 @@
     height: 80%;
     font-size: 24px;
     font-weight: 600;
+    color: #1E1E28;
+
+}
+
+.proposalTitleContainer :visited {
+    color: #1E1E28;
 }
 
 .proposalAuthorContainer {
