--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
     justify-content: space-between;
     background-color: #fafafa;
     /* background: linear-gradient(113.5% 113.5% at 56.15% -32.22%, rgba(229, 0, 122, 0.3) 0%, rgba(243, 137, 193, 0.138844) 70.82%, rgba(255, 255, 255, 0) 100%)  */
-    /* background: radial-gradient(178.37% 178.37% at 50.03% -149.68%, rgba(229, 0, 122, 0.6) 0%, rgba(229, 0, 122, 0) 100%), #FFFFFF; */
+    background: radial-gradient(178.37% 178.37% at 50.03% -149.68%, rgba(229, 0, 122, 0.6) 0%, rgba(229, 0, 122, 0) 100%), #FFFFFF;
 
 }
 ::-webkit-scrollbar {
